# Micromouse-simulator

./: CMakeLists.txt
data/: apec2018.csv  crossroads.csv  deadend_test.csv  deadzone_test.csv  floodfill_et_test_maze2.csv  subareas.csv
include/application/: Application.hpp
include/application/algorithms/: Algorithm.hpp  AlgorithmParametersConverter.hpp  AlgorithmStateChecker.hpp  AlgorithmsRegistrator.hpp  CenterLeftAlgorithm.hpp  CenterRightAlgorithm.hpp  DeadEndExclusionAlgorithm.hpp  DeadZoneExclusionAlgorithm.hpp  DepthFirstSearchAlgorithm.hpp  ETFloodfillAlgorithm.hpp  FloodfillAlgorithm.hpp  LeftWallAlgorithm.hpp  Node.hpp  Partition.hpp  PartitionCentralBaseAlgorithm.hpp  PartitionCentralModifiedAlgorithm.hpp  RightWallAlgorithm.hpp
include/application/handlers/: AlgorithmChangeHandler.hpp  HandlerRegistrator.hpp  IHandler.hpp  MazeChangeHandler.hpp  PauseButtonActionHandler.hpp  ResetButtonActionHandler.hpp  SaveButtonActionHandler.hpp  ScanButtonActionHandler.hpp  SliderChangeHandler.hpp  StartButtonActionHandler.hpp  TextEditHandler.hpp  TimerActionHandler.hpp
include/application/maze/: MazeBuilder.hpp  MazeFileReader.hpp
include/application/paint/: DataPainter.hpp  GridPainter.hpp  IPainter.hpp  MazePainter.hpp  PaintingSettings.hpp  PaintingWidgetHelper.hpp  PathPainter.hpp  RobotPainter.hpp
include/application/updaters/: StatisticLabelUpdater.hpp
include/gui/: ControlGroupBox.hpp  IPaintingWidgetHelper.hpp  InformationGroupBox.hpp  PaintingWidget.hpp  SettingsGroupBox.hpp  StatisticsGroupBox.hpp  mainwindow.h
include/simulation/: Coordinates.hpp  Direction.hpp  Simulation.hpp  SimulationSettings.hpp  SimulationState.hpp  Statistics.hpp  fwd.hpp
include/simulation/algorithm/: IAlgorithm.hpp
include/simulation/maze/: Cell.hpp  MazeSettings.hpp  MazeWrapper.hpp  Wall.hpp  WallState.hpp
include/simulation/robot/: Micromouse.hpp  Robot.hpp
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  CMakeLists.txt
src/application/algorithms/: Algorithm.cpp  AlgorithmParametersConverter.cpp  AlgorithmStateChecker.cpp  AlgorithmsRegistrator.cpp  CenterLeftAlgorithm.cpp  CenterRightAlgorithm.cpp  DeadEndExclusionAlgorithm.cpp  DeadZoneExclusionAlgorithm.cpp  DepthFirstSearchAlgorithm.cpp  ETFloodfillAlgorithm.cpp  FloodfillAlgorithm.cpp  LeftWallAlgorithm.cpp  Node.cpp  PartitionCentralBaseAlgorithm.cpp  PartitionCentralModifiedAlgorithm.cpp  RightWallAlgorithm.cpp
src/application/handlers/: AlgorithmChangeHandler.cpp  HandlerRegistrator.cpp  MazeChangeHandler.cpp  PauseButtonActionHandler.cpp  ResetButtonActionHandler.cpp  SaveButtonActionHandler.cpp  ScanButtonActionHandler.cpp  SliderChangeHandler.cpp  StartButtonActionHandler.cpp  TextEditHandler.cpp  TimerActionHandler.cpp
src/application/maze/: MazeBuilder.cpp  MazeFileReader.cpp
src/application/paint/: DataPainter.cpp  GridPainter.cpp  MazePainter.cpp  PaintingWidgetHelper.cpp  PathPainter.cpp  RobotPainter.cpp
src/application/updaters/: StatisticLabelUpdater.cpp
src/gui/: CMakeLists.txt  ControlGroupBox.cpp  InformationGroupBox.cpp  PaintingWidget.cpp  SettingsGroupBox.cpp  StatisticsGroupBox.cpp  mainwindow.cpp  mainwindow.ui
src/simulation/: CMakeLists.txt  Coordinates.cpp  Simulation.cpp  Statistics.cpp
src/simulation/maze/: Cell.cpp  MazeWrapper.cpp  Wall.cpp
src/simulation/robot/: Micromouse.cpp  Robot.cpp
